Added java and groovy version to the readme.